k8s/tofu/codeai-k8s/cluster-infra-argocd/test/test-external-secrets.yaml
apiVersion: external-secrets.io/v1
kind: ExternalSecret
metadata:
  name: addons-test-staging-secret
  namespace: staging
spec:
  refreshInterval: 1m
  secretStoreRef:
    name: aws-secrets-manager-store
    kind: SecretStore
  target:
    name: addons-test-staging-secret
  data:
    - secretKey: contentful_api_key
      remoteRef:
        key: staging/cdo/contentful_api_key
---
apiVersion: external-secrets.io/v1
kind: ExternalSecret
metadata:
  name: addons-test-cfn-stack-staging-secret
  namespace: staging
spec:
  refreshInterval: 1m
  secretStoreRef:
    name: aws-secrets-manager-store
    kind: SecretStore
  target:
    name: addons-test-cfn-stack-staging-secret
  data:
    - secretKey: db_endpoint_proxy_reader_port
      remoteRef:
        key: CfnStack/staging/db_endpoint_proxy_reader_port
---
apiVersion: external-secrets.io/v1
kind: ExternalSecret
metadata:
  name: addons-test-staging-cdo-fan-in-secret
  namespace: staging
spec:
  refreshInterval: 1m
  secretStoreRef:
    name: aws-secrets-manager-store
    kind: SecretStore
  target:
    name: addons-test-staging-cdo-fan-in-secret
  dataFrom:
    - find:
        path: staging/cdo/
        name:
          regexp: "^staging/cdo/.*$"
      rewrite:
        - regexp:
            source: "^staging/cdo/(.*)$"
            target: "$1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: adhoc-addons-test-123
  labels:
    addons-test-adhoc: "true"
---
apiVersion: external-secrets.io/v1
kind: ClusterExternalSecret
metadata:
  name: addons-test-adhoc-secret
spec:
  externalSecretName: addons-test-adhoc-secret-es
  namespaceSelectors:
    - matchLabels:
        addons-test-adhoc: "true"
  refreshTime: 1m
  externalSecretSpec:
    refreshInterval: 1m
    secretStoreRef:
      name: aws-secrets-manager-store-adhoc
      kind: ClusterSecretStore
    target:
      name: addons-test-adhoc-secret
    data:
      - secretKey: contentful_api_key
        remoteRef:
          key: adhoc/cdo/contentful_api_key
